--- a/.gitignore
+++ b/.gitignore
@@ -150,7 +150,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-chat_example.py
-files/nba.sqlite
 flagged_data_points
 .vscode
+db/formula1.sqlite
