--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,6 +12,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      OPENAI_API_KEY: 'fake-key'
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.11
